demo-mcp-2-code-generatororequestador/input/reference-repos/springboot-repos/ArchitypeSpringTemp/deploy/deploy-onpremise.yaml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: ${appName}
    legado: LEGADO
    proyecto: IVR
    subproyecto: SUB_PROYECTO
    tecnologia: SpringBoot-Maven
  name: ${appName}
  namespace: nm-ivr-evolucion-prod
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    app: ${appName}
    deploymentconfig: ${appName}
  strategy:
    activeDeadlineSeconds: 21600
    resources:
      limits:
        cpu: 200m
        memory: 350Mi
      requests:
        cpu: 10m
        memory: 10Mi
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 120
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: ${appName}
        deploymentconfig: ${appName}
      name : ${appName}
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: ${appName}-config
            - secretRef:
                name: ${appName}-secret
          image: docker-registry.default.svc:5000/nm-ivr-evolucion-prod/${appName}:latest
          imagePullPolicy: IfNotPresent
          name: ${appName}
          ports:
            - name : service-port
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 350Mi
            requests:
              cpu: 10m
              memory: 10Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${appName}
  name: ${appName}
  namespace: nm-ivr-evolucion-prod
spec:
  ports:
    - name : service-port
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ${appName}
    deploymentconfig: ${appName}
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: ${appName}
  name: ${appName}
  namespace: nm-ivr-evolucion-prod
spec:
  port:
    targetPort: service-port
  to:
    kind: Service
    name: ${appName}
    weight: 100
  wildcardPolicy: None
